--- a/css/styles.css
+++ b/css/styles.css
@@ -39,21 +39,31 @@ p {
     margin-left: 0;
     margin-right: 0;
 }
+
 img {
     display: block;
 }
 
+
 .container {
     width: 1200px;
-    outline: 3px solid tomato;
-    margin-top: 94px;
+    /* outline: 2px solid tomato; */
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 }
+
+.page-header {
+    border-bottom: 1px solid #ECECEC; 
+}
+
+
 .margin-reset {
     margin-top: 0px;
+}
+.borderclass {
+    border-bottom:1px solid #ECECEC;
 }
 
 .main-nav {
@@ -66,7 +76,7 @@ img {
 
 
 .logo {
-outline: 1px solid tomato;
+/* outline: 1px solid tomato; */
 
     font-family: raleway, sans-serif;
     color: black;
@@ -96,7 +106,7 @@ padding-left: 0px;}
 
 .site-nav .item+.item {
     margin-left: 50px;
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
 }
 
 
@@ -104,7 +114,7 @@ padding-left: 0px;}
     padding-top: 32px;
     padding-bottom: 32px;
     display: block;
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
 }
 
 
@@ -138,7 +148,7 @@ padding-left: 0px;}
 
 .container-auth {
     display:flex;
-    outline: 2px solid teal;
+    /* outline: 2px solid teal; */
 }
 
 .container-auth > .item+.item {
@@ -153,7 +163,7 @@ padding-left: 0px;}
 .section .hero {
     margin-top: 0;
     margin-bottom: 30px;
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
     margin-left: auto;
     margin-right: auto;
     min-width: 696px;
@@ -175,6 +185,9 @@ padding-left: 0px;}
 .services {
     display: flex;
 
+}
+.services .item {
+    width: calc( (100% - 60px) / 3);
 }
 
 .services .item + .item {
@@ -200,8 +213,7 @@ padding-bottom: 210px;
 
 .advantages {
     margin-top: 0px;
-    padding-top: 94px;
-    padding-bottom: 94px;
+   
     
 }
 
@@ -211,9 +223,9 @@ padding-bottom: 210px;
 }
 
 .advantages-list .item {
-width: calc((100%-90px)/3);
+width: calc((100% - 90px) / 3);
 margin-right: 30px;
-outline: 1px solid teal;
+/* outline: 1px solid teal; */
 }
 .advantages-list .item:nth-child(4n) {
     margin-right: 0px;
@@ -263,7 +275,7 @@ text-transform: uppercase;
 
     background-color: #fff;
 
-    outline: 1px solid tomato;
+    /* outline: 1px solid tomato; */
 }
 
 .team-list .item:nth-child(4n) {
@@ -297,6 +309,10 @@ text-transform: uppercase;
 
 .grey-bgc {
     background-color: var(--background-secondary-color);
+}
+
+.section {
+    padding-top: 94px;
 }
 
 /* button */
@@ -374,13 +390,27 @@ text-transform: uppercase;
      font-size: 16px;
     line-height: 1.62;
     letter-spacing: 0.03em;
-
         cursor:pointer;
- }
+    
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+            0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+        border-radius: 4px;
+            border:transparent;
+}
+
+
+
 .filter .filter-button:hover, .filter .filter-button:focus {
     color:#fff;
     background-color: var(--accent-color)
 }
+
+.filter .item + .item {
+margin-left: 8px;
+}
+
+
 .port-subheader {
     color:var(--secondary-text-color);
     font-weight: 700;
@@ -395,4 +425,44 @@ color: var(--primary-text-color);
 }
 .list a {
     text-decoration: none;
+}
+
+.section-port {
+    padding-top: 100px;
+
+}
+
+.header-main {
+    display: none;
+}
+
+
+
+
+
+.section-port .filter {
+    display: flex;
+    justify-content: center;
+}
+
+
+
+.port-cards {
+
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 56px;
+}
+.port-cards .item {
+    width: calc( (100% - 60px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
+    border: 1px solid #EEEEEE;
+}
+
+.port-cards .item:nth-child(3n) {
+    margin-right: 0px;
+}
+.port-cards .item:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
 }
