--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ p {
 
 img {
     display: block;
+    min-width: 100%;
 }
 
 
@@ -67,6 +68,11 @@ img {
 .main-nav {
     display: flex;
     align-items: center;
+}
+
+.nav-align {
+    display: flex;
+        align-items: center;
 }
 
 
@@ -136,14 +142,16 @@ padding-left: 0px;}
     margin-left: auto;
 }
 .auth a {
-    color:var(--primary-text-color);
+    /* color:var(--primary-text-color); */
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
         text-decoration: none;
 }
-
+.email {
+    color:var(--primary-text-color)
+}
 .container-auth {
     display:flex;
     /* outline: 2px solid teal; */
@@ -164,7 +172,7 @@ padding-left: 0px;}
     /* outline: 2px solid tomato; */
     margin-left: auto;
     margin-right: auto;
-    min-width: 696px;
+    max-width: 696px;
 
     color: #fff;
     font-weight: 900;
@@ -192,18 +200,11 @@ padding-left: 0px;}
     margin-left: 30px;
 }
 
-.section-bgc {
-padding-top: 200px;
-padding-bottom: 210px;
-    
-
-
-    background-color:var(--hero-and-footer-color);
-}
 
 .bgc-footer {
-
     background-color: var(--hero-and-footer-color);
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 
@@ -258,8 +259,8 @@ text-transform: uppercase;
 /* our team */
 
 .team {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 0px;
+    padding-bottom: 04px;
 
 }
 .team-list {
@@ -286,12 +287,16 @@ text-transform: uppercase;
 }
 
 .subheader-team {
-    margin-bottom: 10px;
 
     font-weight: 500;
     font-size: 16px;
     line-height: 1.17;
     color:var(--secondary-text-color);
+}
+
+.padding-desc {
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 
@@ -311,6 +316,14 @@ text-transform: uppercase;
 
 .section {
     padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.section-bgc {
+    padding-top: 200px;
+    padding-bottom: 200px;
+
+    background-color: var(--hero-and-footer-color);
 }
 
 /* button */
@@ -327,6 +340,7 @@ text-transform: uppercase;
     border:transparent;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    padding: 10px 32px;
 }
 .button:hover, button:focus {
     color:#fff;
@@ -339,6 +353,7 @@ text-transform: uppercase;
 }
 
 .logo-footer {
+    display: block;
     color: #fff; 
     background-color:var(--hero-and-footer-color);
 
@@ -347,11 +362,13 @@ text-transform: uppercase;
     line-height: 1.2;
     text-decoration: none;
     font-weight: 700;
+    margin-bottom: 20px;
 ;
 
 }
  address {
-     color: #fff; background-color:var(--hero-and-footer-color);
+     color: #fff; 
+     background-color:var(--hero-and-footer-color);
  }
 .bgc-grey {
     color:rgba(255, 255, 255, 0.6);
@@ -361,22 +378,45 @@ text-transform: uppercase;
 
  .address-no-italic {
      font-style:normal;
-     color:rgba(255, 255, 255, 0.6);
+     color:rgb(255, 255, 255);
+ }
+ .address-no-italic  .item {
+     color: rgba(255, 255, 255, 0.6);
  }
 
 .container-footer {
     margin-top: 0px;
-    padding-top: 60px;
-    padding-bottom: 60px;
+   
 }
 
 .advantages .hide {
     margin-bottom: 0px;
 }
 
-.hide {
-    display: none;
+.visually-hidden:not(:focus):not(:active) {
+clip: rect(0 0 0 0);
+clip-path: inset(50%);
+height: 1px;
+overflow: hidden;
+position: absolute;
+white-space: nowrap;
+width: 1px;
 }
+
+
+.auth .auth-footer {
+    color: var(--primary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+}
+
+.email-foot {
+    color:rgba(255, 255, 255, 0.6)
+}
+
  /* from here starting adding additional styles for portfolio.html */
  
  .site-nav .current {
@@ -391,6 +431,7 @@ text-transform: uppercase;
     line-height: 1.62;
     letter-spacing: 0.03em;
         cursor:pointer;
+        padding: 6px 22px;
     
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
             0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -417,6 +458,7 @@ margin-left: 8px;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    margin-bottom: 4px;
 }
 .port-text {
 font-size: 16px;
@@ -428,7 +470,8 @@ color: var(--primary-text-color);
 }
 
 .section-port {
-    padding-top: 100px;
+    padding-top: 94px;
+    padding-bottom: 94px;
 
 }
 
@@ -443,6 +486,7 @@ color: var(--primary-text-color);
 .section-port .filter {
     display: flex;
     justify-content: center;
+    margin-bottom: 50px;
 }
 
 
@@ -451,14 +495,11 @@ color: var(--primary-text-color);
 
     display: flex;
     flex-wrap: wrap;
-    padding-top: 56px;
-    padding-bottom: 94px;
 }
 .port-cards .item {
     width: calc( (100% - 60px) / 3);
     margin-right: 30px;
     margin-bottom: 30px;
-    border: 1px solid #EEEEEE;
 }
 
 .port-cards .item:nth-child(3n) {
@@ -466,4 +507,11 @@ color: var(--primary-text-color);
 }
 .port-cards .item:nth-last-child(-n + 3) {
     margin-bottom: 0px;
+}
+
+.cards-desc {
+    padding: 20px 24px 50px 24px;
+    border-right: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
+    border-left: 1px solid #ECECEC;
 }
