--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ padding-left: 0px;}
     color:var(--secondary-text-color);
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.14px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
         text-decoration: none;
 }
@@ -318,6 +318,9 @@ text-transform: uppercase;
     padding-top: 94px;
     padding-bottom: 94px;
 }
+.no-padding-top {
+    padding-top: 0px;
+}
 
 .section-bgc {
     padding-top: 200px;
@@ -433,9 +436,8 @@ width: 1px;
         cursor:pointer;
         padding: 6px 22px;
     
-        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-            0px 1px 2px rgba(0, 0, 0, 0.08),
-            0px 2px 2px rgba(0, 0, 0, 0.12);
+       
+        
         border-radius: 4px;
             border:transparent;
 }
@@ -510,7 +512,7 @@ color: var(--primary-text-color);
 }
 
 .cards-desc {
-    padding: 20px 24px 50px 24px;
+    padding: 20px 24px 20px 24px;
     border-right: 1px solid #ECECEC;
     border-bottom: 1px solid #ECECEC;
     border-left: 1px solid #ECECEC;
